Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-32094

Warnings reported by clang-scan-build

    XMLWordPrintable

Details

    • Untriaged
    • Unknown

    Description

      Recently we got a new warning in clang-scan-build causing CV to start failing:

       

      http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/12317/clangScanBuildBugs/

       

      (The new warning is the division by zero one in vbucket_bench.cc. This is a false warning as the test performs a check with ASSERT_TRUE which would stop the execution of the function if the condition is false). Given that it is easy to work around the problem we should do so to unblock CV

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            trond Trond Norbye
            trond Trond Norbye
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty