MB-32094: Fix "division by zero" warning reported by clang-scan-build

clang-scan-build reports a (false) warning about a division by zero,
but the code already checked that with ASSERT_TRUE which stops
execution of the current function. Work around the problem by
performing an explicit check

Change-Id: I06f862d1a7b94c7ff1269f4cc992af7171592fb9
Reviewed-on: http://review.couchbase.org/101979
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>